Change to arabic

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -4,3 +4,55 @@ ar:
   slider_description: 'تضمن PlusOne رحلة طبية خالية من المتاعب مدعومة من مدير الحالة لكل حالة على حدة'
   timely_consultations: 'مشاورات في الوقت المناسب'
   trustful_workflow: 'سير عمل موثوق'
+  world_renowned_experts: "خبراء عالميين"
+  our_experts: "خبراؤنا هم مستشارون طبيون يأتون من أرقى المراكز الطبية في الولايات المتحدة الأمريكية وأوروبا"
+  case_manager: "سوف يرافقك مديرو الحالات الطبية في بلس وان في رحلة الرعاية الصحية الخاصة بك سواء كنت تريد استشارة أحد الخبراء عن طريق بشكة الإنترنت، أو كنت تريد متابعة رحلة الرعاية الصحية الخاص بك في الخارج."
+  oncologists: "أطباء الأوارام"
+  neurologists: "أطباء الأمراض العصبية"
+  orthopedics: "أطباء العظام"
+  gynecologists : "أطباء أمراض النساء"
+  equality: " المساواة"
+  equality_text: " البشر خلقوا متساوين، والرعاية الصحية هي حق متساو للجميع"
+  security: " الأمن"
+  security_text : " يجب التعامل مع سجلات المرضى بأعلى درجات السرية والخصوصية"
+  quality: ' الجودة'
+  quality_text: 'عندما يتعلق الأمر بصحة الإنسان، يجب اعتبار  أفضل الخيارات فقط'
+  innovation: " الابتكار"
+  innoation_text: "نطور عملياتنا وأدواتنا بشكل مستمر لنكون قادرين على تحقيق معايير الجودة والمساواة لدينا"
+  about_us: 'معلومات عنا'
+  about_us_text: "نحن نؤمن إيمانًا تامًا بالمساواة في الرعاية الطبية، ولأن ما لا يُدرك كله لا يُترك كله، فأثناء سعينا لتحقيق هذه المساواة نبذل الغالي والنفيس لخدمة كل مريض بأفضل صورة ممكنة في المناطق التي نغطيها."
+  home: "الصفحة الرئيسية"
+  treatment: "علاج او معاملة"
+  contact: "اتصل"
+  useful_link: 'رابط مفيد'
+  faq: 'التعليمات'
+  Q1: "كيف يمكنني استخدام بلس وان  PlusOne؟"
+  Q1Ans: 'يوفر PlusOne  بلس وان للمرضى القدرة على الحصول على رأي خبير طبي عالمي. ويمكنك أيضًا طلب الحصول على خدماتنا من خلال طبيبك المعالج أو مديري الحالات لدينا الذين هم أطباء مؤهلون أيضًا.
+          قم باستشارة أحد الخبراء من هنا  (رابط نموذج استشير أحد خبراء بلس وان (PlusOne، وسيقوم فريقنا بالرد عليك خلال يومين عمل.'
+  Q2: "لماذا أحتاج كمريض إلى رأي أخر بخلاف رأي الطبيب المعالج لي؟ "
+  Q2Ans: "يجدر بك استشارة طبيب أخر أو أكثر بخلاف الطبيب المعالج لك لأسباب عديدة منها ما ذكرته جمعية السرطان الأمريكية وهو الآتي:
+          - التعرف عن خيارات أخرى ممكنة للعلاج
+          - قد يكون هناك احتمالية لتشخيصك بمرض نادر أو غير عادي
+          - في حالة شعورك بوجود مشكلة في التواصل مع طبيبك أو ترغب في أن يشرح لك شخص آخر خيارات التشخيص والعلاج"
+  Q3: "ما هي التخصصات المتاحة؟"
+  Q3Ans: 'حاليًا يوفر PlusOne استشارة أفضل الخبراء العالميين في علم الأورام، والأمراض العصبية، وطب وجراحة العظام، وأمراض النساء. ونحن نعمل بجد لإضافة المزيد من تخصصات الحالات الحرجة الأخرى قريبًا.'
+  Q4: "كم من الوقت يستغرق الحصول على تقرير رأي الخبير الطبي؟"
+  Q4Ans: "عند طلبك للحصول على رأي أحد الخبراء سُيطلب منك تزويدنا بكافة المعلومات والبيانات المتعلقة بحالتك الصحية، وعلى افتراض قيامك برفع  جميع البيانات ذات الصلة والتقارير الطبية وفحوصات الأشعة بشكل صحيح ، سيتم تقديم الرأي الطبي إليك  في غضون سبعة أيام عمل."
+  Q5: "بعد استلام التقرير الطبي، هل يمكنني إرسال بعض الأسئلة  للمتابعة أو لطلب توضيح ؟"
+  Q5Ans: "توجد نافذة لمدة 14 يومًا متتاليًا لتقديم المزيد من الأسئلة في حالة وجود مزيد من الإيضاحات المطلوبة من الخبراء. "
+  Q6: "ما هي تكلفة الخدمة؟ "
+  Q6Ans: "الأمر يعتمد بشكل كبير على الخبير أو المستشار الطبي الذي تم اختياره، كما يعتمد أيضًا على درجة تعقيد الحالة. وسيساعدك مدير الحالة في تحديد تقديرات التكلفة.
+"
+  always_there: 'دائما هناك لرعاية'
+  first_name: 'الاسم الاول'
+  last_name : 'الكنية'
+  email : "البريد الإلكتروني"
+  diaease_type : 'نوع المرض'
+  working_hour: 'ساعات العمل'
+  monday: "يوم الاثنين"
+  tuesday: 'الثلاثاء'
+  wednesday: "الأربعاء"
+  thursday: "الخميس"
+  friday : "يوم الجمعة"
+  saturday: "يوم السبت"
+  sunday: "الأحد"
