sliders added on home page

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -4,7 +4,6 @@ ar:
   slider_description: 'تضمن PlusOne رحلة طبية خالية من المتاعب مدعومة من مدير الحالة لكل حالة على حدة'
   timely_consultations: 'مشاورات في الوقت المناسب'
   trustful_workflow: 'سير عمل موثوق'
-  world_renowned_experts: "خبراء عالميين"
   our_experts: "خبراؤنا هم مستشارون طبيون يأتون من أرقى المراكز الطبية في الولايات المتحدة الأمريكية وأوروبا"
   case_manager: "سوف يرافقك مديرو الحالات الطبية في بلس وان في رحلة الرعاية الصحية الخاصة بك سواء كنت تريد استشارة أحد الخبراء عن طريق بشكة الإنترنت، أو كنت تريد متابعة رحلة الرعاية الصحية الخاص بك في الخارج."
   oncologists: "أطباء الأوارام"
@@ -41,8 +40,7 @@ ar:
   Q5: "بعد استلام التقرير الطبي، هل يمكنني إرسال بعض الأسئلة  للمتابعة أو لطلب توضيح ؟"
   Q5Ans: "توجد نافذة لمدة 14 يومًا متتاليًا لتقديم المزيد من الأسئلة في حالة وجود مزيد من الإيضاحات المطلوبة من الخبراء. "
   Q6: "ما هي تكلفة الخدمة؟ "
-  Q6Ans: "الأمر يعتمد بشكل كبير على الخبير أو المستشار الطبي الذي تم اختياره، كما يعتمد أيضًا على درجة تعقيد الحالة. وسيساعدك مدير الحالة في تحديد تقديرات التكلفة.
-"
+  Q6Ans: "الأمر يعتمد بشكل كبير على الخبير أو المستشار الطبي الذي تم اختياره، كما يعتمد أيضًا على درجة تعقيد الحالة. وسيساعدك مدير الحالة في تحديد تقديرات التكلفة."
   always_there: 'دائما هناك لرعاية'
   first_name: 'الاسم الاول'
   last_name : 'الكنية'
@@ -59,3 +57,19 @@ ar:
   closed : "مغلق"
   Phone : 'هاتف'
   special_request : 'طلب خاص'
+  second_opinion: "الآراء الثانية تنقذ الأرواح"
+  slider_one: "تضمن PlusOne رحلة طبية خالية من المتاعب مدعومة من مدير الحالة لكل حالة على حدة."
+  slider_two: "يوفر PlusOne لك ولأحبائك إمكانية الوصول إلى خبراء طبيين مشهورين عالميًا بنقرات قليلة"
+  slider_three: "PlusOne هي المنصة الأكثر كفاءة وموثوقية في مجال الاستشارات الطبية عبر الإنترنت في منطقة الشرق الأوسط وشمال إفريقيا"
+  vision: 'الرؤية'
+  vision_text: "فرصة متساوية للحصول على رعاية صحية عالية الجودة لكل انسان"
+  timely_cont_text: 'بمجرد أن نحصل على جميع البيانات والوثائق المتعلقة بالحالة المرضية ستسعى بلس وان PlusOne جاهدة للحصول على رأي أحد الخبراء في غضون 7 أيام عمل، وقد يكون رأي الخبير في صورة تقرير مكتوب أو في صورة لقاء فيديو مع الخبير على شبكة الإنترنت، وفي كلا الحالتين سُيسمح للمريض بإرسال أسئلة المتابعة وطلبات الاستيضاح  للخبير في غضون  14 يوم من تاريخ استلام التقرير الطبي الأولي.'
+  case_no: 'حالة  SM3321'
+  case_text: "لقد قامو بعمل رائع في بلس وان، فهم لم يكتفوا فقط بمساعدتي في الحصول على رأي أكثر من خبير في مجال طب الأعصاب، بل قد قامت أيضًا مديرة الحالة الخاص بي الدكتورة أيات بمساعدتي ودعمي بشتى الطرق في مرحلة المتابعة، وساعدتنا في فهم التقرير الطبي وكل ما جاء فيه بشكل سليم ووافي."
+  trustful_workflow_text: "سهولة في الإجراءات وموثوقية في الأداءمع بلس وان كل شيء سيسير حسب ما هو مخطط له، بدون قلق أو مفاجأت غير سارة، فنحن نضمن لك حصولك على التقرير الطبي من الخبير في الموعد المقرر."
+  step1: "الخطوة الأولى: أطلب استشارة أحد الخبراء"
+  step2: "الخطوة الثانية: قم باختيار أحد خبراءنا العالميين"
+  step3: "الخطوة الثالثة: أحصل على المشورة الطبية السليمة"
+  learnMore: "إعرف أكثر"
+  seeking : "هل تريد استشارة أحد الخبراء؟"
+  startHere: "إبدأ هنا"
