--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -108,3 +108,4 @@ en:
   learnMore: "Learn More"
   seeking: "Are you seeking a medical Second Opinion?"
   startHere: 'Start here'
+  contact_us : "Contact us"
