English version ui issue fixed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,7 +56,7 @@ en:
   treatment: "Treatment"
   contact: "Contact"
   useful_link: 'Useful Link'
-  faq: 'Faq'
+  faq: 'Faqs'
   Q1: "How can I use PlusOne? "
   Q1Ans: 'PlusOne gives patients the ability to get a Second Opinion from world-renowned experts. You can also request to receive our services through your treating doctor or our Case Managers who are qualified physicians themselves.
 
