Arabic issue fixed

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1,9 +1,10 @@
 ar:
-  ask_plus_one_expert: 'اسأل خبير واحد'
+  ask_plus_one_expert: '‫‪PlusOne‬‬ ‫خبراء‬ ‫أحد‬ ‫استشر‬'
   world_renowned_experts: 'خبراء عالميين'
   slider_description: 'تضمن PlusOne رحلة طبية خالية من المتاعب مدعومة من مدير الحالة لكل حالة على حدة'
-  timely_consultations: 'مشاورات في الوقت المناسب'
-  trustful_workflow: 'سير عمل موثوق'
+  timely_consultations: '‫وقت‬ ‫أسرع‬ ‫في‬ ‫يأتيك‬ ‫شامل‬ ‫طبي‬ ‫تقرير‬
+                         ‫ممكن‬'
+  trustful_workflow: '‫األداء‬ ‫في‬ ‫وموثوقية‬ ‫اإلجراءات‬ ‫في‬ ‫سهولة‬'
   our_experts: "خبراؤنا هم مستشارون طبيون يأتون من أرقى المراكز الطبية في الولايات المتحدة الأمريكية وأوروبا"
   case_manager: "سوف يرافقك مديرو الحالات الطبية في بلس وان في رحلة الرعاية الصحية الخاصة بك سواء كنت تريد استشارة أحد الخبراء عن طريق بشكة الإنترنت، أو كنت تريد متابعة رحلة الرعاية الصحية الخاص بك في الخارج."
   oncologists: "أطباء الأوارام"
@@ -18,11 +19,11 @@ ar:
   quality_text: 'عندما يتعلق الأمر بصحة الإنسان، يجب اعتبار  أفضل الخيارات فقط'
   innovation: " الابتكار"
   innoation_text: "نطور عملياتنا وأدواتنا بشكل مستمر لنكون قادرين على تحقيق معايير الجودة والمساواة لدينا"
-  about_us: 'معلومات عنا'
+  about_us: '‫ من ‫نحن‬‬'
   about_us_text: "نحن نؤمن إيمانًا تامًا بالمساواة في الرعاية الطبية، ولأن ما لا يُدرك كله لا يُترك كله، فأثناء سعينا لتحقيق هذه المساواة نبذل الغالي والنفيس لخدمة كل مريض بأفضل صورة ممكنة في المناطق التي نغطيها."
   home: "الصفحة الرئيسية"
   treatment: "علاج او معاملة"
-  contact: "اتصل"
+  contact: "‫اتصل بنا"
   useful_link: 'رابط مفيد'
   faq: 'التعليمات'
   Q1: "كيف يمكنني استخدام بلس وان  PlusOne؟"
@@ -57,20 +58,36 @@ ar:
   closed : "مغلق"
   Phone : 'هاتف'
   special_request : 'طلب خاص'
-  second_opinion: "الآراء الثانية تنقذ الأرواح"
-  slider_one: "تضمن PlusOne رحلة طبية خالية من المتاعب مدعومة من مدير الحالة لكل حالة على حدة."
-  slider_two: "يوفر PlusOne لك ولأحبائك إمكانية الوصول إلى خبراء طبيين مشهورين عالميًا بنقرات قليلة"
-  slider_three: "PlusOne هي المنصة الأكثر كفاءة وموثوقية في مجال الاستشارات الطبية عبر الإنترنت في منطقة الشرق الأوسط وشمال إفريقيا"
+  second_opinion: "‫حياتك‬ ‫ينقذ‬ ‫قد‬ ‫اإلضافي‬ ‫الطبي‬ ‫الرأي‬"
+  slider_one: "‫في‬ ‫ومصداقية‬ ‫كفاءة‬ ‫األكثر‬ ‫المنصة‬ ‫هي‬ ‫‪PlusOne‬‬
+               ‫ي‬ ‫ف‬ ‫اإلنترنت‬ ‫شبكة‬ ‫على‬ ‫الطبية‬ ‫االستشارات‬ ‫مجال‬
+               ‫إفريقيا‬ ‫وشمال‬ ‫األوسط‬ ‫الشرق‬"
+  slider_two: "‫ة‬ ‫فرص‬ ‫منك‬ ‫المقربين‬ ‫ولألشخاص‬ ‫لك‬ ‫‪PlusOne‬‬ ‫تتيح‬
+               ‫الطبي‬ ‫المجال‬ ‫في‬ ‫الخبراء‬ ‫أفضل‬ ‫مع‬ ‫التواصل‬
+               ‫بسيطة‬ ‫بخطوات‬"
+  slider_three: "‫رحلة‬ ‫المستخدمين‬ ‫جميع‬ ‫سيخوض‬ ‫‪PlusOne‬‬ ‫مع‬
+                 ‫ة‬ ‫حال‬ ‫مدير‬ ‫خاللها‬ ‫يصحبك‬ ‫المتاعب‬ ‫من‬ ‫خالية‬ ‫طبية‬
+                 ‫نكرس‬ ‫ن‬ ‫فنح‬ ‫‪،‬‬ ‫تفاصيلها‬ ‫بكل‬ ‫الطبية‬ ‫حالتك‬ ‫إدارة‬ ‫مهمته‬
+                 ‫حدة‬ ‫على‬ ‫طبية‬ ‫حالة‬ ‫لكل‬ ‫حالة‬ ‫مدير‬"
   vision: 'الرؤية'
   vision_text: "فرصة متساوية للحصول على رعاية صحية عالية الجودة لكل انسان"
-  timely_cont_text: 'بمجرد أن نحصل على جميع البيانات والوثائق المتعلقة بالحالة المرضية ستسعى بلس وان PlusOne جاهدة للحصول على رأي أحد الخبراء في غضون 7 أيام عمل، وقد يكون رأي الخبير في صورة تقرير مكتوب أو في صورة لقاء فيديو مع الخبير على شبكة الإنترنت، وفي كلا الحالتين سُيسمح للمريض بإرسال أسئلة المتابعة وطلبات الاستيضاح  للخبير في غضون  14 يوم من تاريخ استلام التقرير الطبي الأولي.'
+  timely_cont_text: '‫ق‬ ‫والوثائ‬ ‫البيانات‬ ‫جميع‬ ‫على‬ ‫نحصل‬ ‫أن‬ ‫بمجرد‬
+                     ‫‪PlusOne‬‬ ‫ستسعى‬ ‫المرضية‬ ‫بالحالة‬ ‫المتعلقة‬
+                     ‫في‬ ‫الخبراء‬ ‫أحد‬ ‫رأي‬ ‫على‬ ‫للحصول‬ ‫جاهدة‬
+                     ‫في‬ ‫الخبير‬ ‫رأي‬ ‫يكون‬ ‫وقد‬ ‫عمل‪،‬‬ ‫أيام‬ ‫‪7‬‬ ‫غضون‬
+                     ‫مع‬ ‫يو‬ ‫فيد‬ ‫لقاء‬ ‫صورة‬ ‫في‬ ‫أو‬ ‫مكتوب‬ ‫تقرير‬ ‫صورة‬
+                     ‫لتين‬ ‫الحا‬ ‫كال‬ ‫وفي‬ ‫اإلنترنت‪،‬‬ ‫شبكة‬ ‫على‬ ‫الخبير‬
+                     ‫طلبات‬ ‫و‬ ‫المتابعة‬ ‫أسئلة‬ ‫بإرسال‬ ‫للمريض‬ ‫يسمح‬ ‫س‬
+                     ‫تاريخ‬ ‫من‬ ‫يوم‬ ‫‪15‬‬ ‫غضون‬ ‫في‬ ‫للخبير‬ ‫االستيضاح‬
+                     ‫‪.‬‬ ‫األولي‬ ‫الطبي‬ ‫التقرير‬ ‫استالم‬'
   case_no: 'حالة  SM3321'
   case_text: "لقد قامو بعمل رائع في بلس وان، فهم لم يكتفوا فقط بمساعدتي في الحصول على رأي أكثر من خبير في مجال طب الأعصاب، بل قد قامت أيضًا مديرة الحالة الخاص بي الدكتورة أيات بمساعدتي ودعمي بشتى الطرق في مرحلة المتابعة، وساعدتنا في فهم التقرير الطبي وكل ما جاء فيه بشكل سليم ووافي."
-  trustful_workflow_text: "سهولة في الإجراءات وموثوقية في الأداءمع بلس وان كل شيء سيسير حسب ما هو مخطط له، بدون قلق أو مفاجأت غير سارة، فنحن نضمن لك حصولك على التقرير الطبي من الخبير في الموعد المقرر."
+  trustful_workflow_text: "‫ر‬ ‫غي‬ ‫مفاجأت‬ ‫أو‬ ‫قلق‬ ‫بدون‬ ‫له‪،‬‬ ‫مخطط‬ ‫هو‬ ‫ما‬ ‫حسب‬ ‫سيسير‬ ‫شيء‬ ‫كل‬ ‫‪PlusOne‬‬ ‫مع‬
+                           ‫‪.‬‬ ‫المقرر‬ ‫عد‬ ‫المو‬ ‫في‬ ‫الخبير‬ ‫من‬ ‫الطبي‬ ‫التقرير‬ ‫على‬ ‫حصولك‬ ‫لك‬ ‫نضمن‬ ‫فنحن‬ ‫سارة‪،‬‬"
   step1: "الخطوة الأولى: أطلب استشارة أحد الخبراء"
   step2: "الخطوة الثانية: قم باختيار أحد خبراءنا العالميين"
   step3: "الخطوة الثالثة: أحصل على المشورة الطبية السليمة"
   learnMore: "إعرف أكثر"
-  seeking : "هل تريد استشارة أحد الخبراء؟"
+  seeking : "PlusOne ‫خبراء‬ ‫أحد‬ ‫استشر‬"
   startHere: "إبدأ هنا"
   contact_us: "اتصل"
