arabic text changes

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1,11 +1,12 @@
 ar:
-  ask_plus_one_expert: '‫‪PlusOne‬‬ ‫خبراء‬ ‫أحد‬ ‫استشر‬'
+  ask_plus_one_expert: 'PlusOne ‫‪استشر أحد خبراء'
   world_renowned_experts: 'خبراء عالميين'
   slider_description: 'تضمن PlusOne رحلة طبية خالية من المتاعب مدعومة من مدير الحالة لكل حالة على حدة'
-  timely_consultations: 'قرير طبي شامل يأتيك في أسرع وقتممكن '
-  trustful_workflow: '‫األداء‬ ‫في‬ ‫وموثوقية‬ ‫اإلجراءات‬ ‫في‬ ‫سهولة‬'
-  our_experts: "خبراؤنا هم مستشارون طبيون يأتون من أرقى المراكز الطبية في الولايات المتحدة الأمريكية وأوروبا"
-  case_manager: "سوف يرافقك مديرو الحالات الطبية في بلس وان في رحلة الرعاية الصحية الخاصة بك سواء كنت تريد استشارة أحد الخبراء عن طريق بشكة الإنترنت، أو كنت تريد متابعة رحلة الرعاية الصحية الخاص بك في الخارج."
+  timely_consultations: 'تقرير طبي شامل يأتيك في أسرع وقت ممكن'
+  trustful_workflow: 'سهولة في الإجراءات وموثوقية في الأداء‬'
+  our_experts: "خبراؤنا هم مستشارون طبيون يأتون منأرقى المراكز الطبية في الولايات  المتحدة الأمريكية وأوروبا"
+  case_manager: "سوف يرافقك مديرو الحالات الطبيةفي PlusOne في رحلة الرعاية الصحية  الخاصة بك سواء كنت تريد استشارة أحد
+الخبراء عن طريق بشكة الإنترنت، أو كنت تريد متابعة رحلة الرعاية الصحية الخاص بك في الخارج."
   oncologists: "أطباء الأوارام"
   neurologists: "أطباء الأمراض العصبية"
   orthopedics: "أطباء العظام"
@@ -63,15 +64,14 @@ ar:
   slider_three: "مع PlusOne سيخوض جميع المستخدمين رحلة طبية خالية من المتاعب يصحبك خلالها مدير حالة مهمته إدارة حالتك الطبية بكل تفاصيلها ، فنحن نكرس مدير حالة لكل حالة طبية على حدة‬"
   vision: 'الرؤية'
   vision_text: "فرصة متساوية للحصول على رعاية صحية عالية الجودة لكل انسان"
-  timely_cont_text: 'بمجرد أن نحصل على جميع البيانات والوثائقالمتعلقة بالحالة المرضية ستسعى PlusOne  جاهدة للحصول على رأي أحد الخبراء في غضون 7 أيام عمل، وقد يكون رأي الخبير في صورة تقرير مكتوب أو في صورة لقاء فيديو مع الخبير على شبكة الإنترنت، وفي كلا الحالتين ُسيسمح للمريض بإرسال أسئلة المتابعة وطلبات الاستيضاح للخبير في غضون 15 يوم من تاريخ استلام التقرير الطبي الأولي.‬'
+  timely_cont_text: 'بمجرد أن نحصل على جميع البيانات والوثائق المتعلقة بالحالة المرضية ستسعى PlusOne جاهدة للحصول على رأي أحد الخبراء في غضون 7 أيام عمل، وقد يكون رأي الخبير في صورة تقرير مكتوب أو في صورة لقاء فيديو مع الخبير على شبكة الإنترنت، وفي كلا الحالتين ُسيسمح للمريض بإرسال أسئلة المتابعة وطلبات الاستيضاح للخبير في غضون 15 يوم من تاريخ استلام التقرير الطبي الأولي.‬'
   case_no: 'حالة  SM3321'
   case_text: "لقد قامو بعمل رائع في بلس وان، فهم لم يكتفوا فقط بمساعدتي في الحصول على رأي أكثر من خبير في مجال طب الأعصاب، بل قد قامت أيضًا مديرة الحالة الخاص بي الدكتورة أيات بمساعدتي ودعمي بشتى الطرق في مرحلة المتابعة، وساعدتنا في فهم التقرير الطبي وكل ما جاء فيه بشكل سليم ووافي."
-  trustful_workflow_text: "‫ر‬ ‫غي‬ ‫مفاجأت‬ ‫أو‬ ‫قلق‬ ‫بدون‬ ‫له‪،‬‬ ‫مخطط‬ ‫هو‬ ‫ما‬ ‫حسب‬ ‫سيسير‬ ‫شيء‬ ‫كل‬ ‫‪PlusOne‬‬ ‫مع‬
-                           ‫‪.‬‬ ‫المقرر‬ ‫عد‬ ‫المو‬ ‫في‬ ‫الخبير‬ ‫من‬ ‫الطبي‬ ‫التقرير‬ ‫على‬ ‫حصولك‬ ‫لك‬ ‫نضمن‬ ‫فنحن‬ ‫سارة‪،‬‬"
+  trustful_workflow_text: "مع PlusOne كل شيء سيسير حسب ما هو مخطط له، بدون قلق أو مفاجأت غير سارة، فنحن نضمن لك حصولك على التقرير الطبي من الخبير في الموعد المقرر.‫"
   step1: "الخطوة الأولى: أطلب استشارة أحد الخبراء"
   step2: "الخطوة الثانية: قم باختيار أحد خبراءنا العالميين"
   step3: "الخطوة الثالثة: أحصل على المشورة الطبية السليمة"
   learnMore: "إعرف أكثر"
-  seeking : "PlusOne ‫خبراء‬ ‫أحد‬ ‫استشر‬"
+  seeking : "استشر أحد خبراء PlusOne‬"
   startHere: "إبدأ هنا"
   contact_us: "اتصل"
