--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -4,8 +4,10 @@ ar:
   slider_description: 'تضمن PlusOne رحلة طبية خالية من المتاعب مدعومة من مدير الحالة لكل حالة على حدة'
   timely_consultations: 'تقرير طبي شامل يأتيك في أسرع وقت ممكن'
   trustful_workflow: 'سهولة في الإجراءات وموثوقية في الأداء‬'
-  our_experts: "خبراؤنا هم مستشارون طبيون يأتون منأرقى المراكز الطبية في الولايات  المتحدة الأمريكية وأوروبا"
-  case_manager: "سوف يرافقك مديرو الحالات الطبيةفي PlusOne في رحلة الرعاية الصحية  الخاصة بك سواء كنت تريد استشارة أحد
+  our_experts: "خبراؤنا هم مستشارون طبيون يأتون من
+أرقى المراكز الطبية في الولايات  المتحدة الأمريكية وأوروبا"
+  case_manager: "سوف يرافقك مديرو الحالات الطبية
+في PlusOne في رحلة الرعاية الصحية  الخاصة بك سواء كنت تريد استشارة أحد
 الخبراء عن طريق بشكة الإنترنت، أو كنت تريد متابعة رحلة الرعاية الصحية الخاص بك في الخارج."
   oncologists: "أطباء الأوارام"
   neurologists: "أطباء الأمراض العصبية"
@@ -42,7 +44,7 @@ ar:
   Q5Ans: "توجد نافذة لمدة 15 يومًا متتاليًا لتقديم المزيد من الأسئلة في حالة وجود مزيد من الإيضاحات المطلوبة من الخبراء. "
   Q6: "ما هي تكلفة الخدمة؟ "
   Q6Ans: "الأمر يعتمد بشكل كبير على الخبير أو المستشار الطبي الذي تم اختياره، كما يعتمد أيضًا على درجة تعقيد الحالة. وسيساعدك مدير الحالة في تحديد تقديرات التكلفة."
-  always_there: 'دائما هناك لرعاية'
+  always_there: '‫  ‫دائما‬ ‫متواجدون‬ لرعايتك‬'
   first_name: 'الاسم الاول'
   last_name : 'الكنية'
   email : "البريد الإلكتروني"
