--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -27,7 +27,7 @@ ar:
   treatment: "علاج او معاملة"
   contact: "‫اتصل بنا"
   useful_link: 'رابط مفيد'
-  faq: 'التعليمات'
+  faq: 'أسئلة مكررة'
   Q1: "كيف يمكنني استخدام بلس وان  PlusOne؟"
   Q1Ans: 'يوفر PlusOne  بلس وان للمرضى القدرة على الحصول على رأي خبير طبي عالمي. ويمكنك أيضًا طلب الحصول على خدماتنا من خلال طبيبك المعالج أو مديري الحالات لدينا الذين هم أطباء مؤهلون أيضًا.
           قم باستشارة أحد الخبراء من هنا  (رابط نموذج استشير أحد خبراء بلس وان (PlusOne، وسيقوم فريقنا بالرد عليك خلال يومين عمل.'
@@ -41,7 +41,7 @@ ar:
   Q4: "كم من الوقت يستغرق الحصول على تقرير رأي الخبير الطبي؟"
   Q4Ans: "عند طلبك للحصول على رأي أحد الخبراء سُيطلب منك تزويدنا بكافة المعلومات والبيانات المتعلقة بحالتك الصحية، وعلى افتراض قيامك برفع  جميع البيانات ذات الصلة والتقارير الطبية وفحوصات الأشعة بشكل صحيح ، سيتم تقديم الرأي الطبي إليك  في غضون سبعة أيام عمل."
   Q5: "بعد استلام التقرير الطبي، هل يمكنني إرسال بعض الأسئلة  للمتابعة أو لطلب توضيح ؟"
-  Q5Ans: "توجد نافذة لمدة 15 يومًا متتاليًا لتقديم المزيد من الأسئلة في حالة وجود مزيد من الإيضاحات المطلوبة من الخبراء. "
+  Q5Ans: "توجد نافذة لمدة 14 يومًا متتاليًا لتقديم المزيد من الأسئلة في حالة وجود مزيد من الإيضاحات المطلوبة من الخبراء. "
   Q6: "ما هي تكلفة الخدمة؟ "
   Q6Ans: "الأمر يعتمد بشكل كبير على الخبير أو المستشار الطبي الذي تم اختياره، كما يعتمد أيضًا على درجة تعقيد الحالة. وسيساعدك مدير الحالة في تحديد تقديرات التكلفة."
   always_there: '‫  ‫دائما‬ ‫متواجدون‬ لرعايتك‬'
@@ -77,3 +77,5 @@ ar:
   seeking : "استشر أحد خبراء PlusOne‬"
   startHere: "إبدأ هنا"
   contact_us: "اتصل"
+  Privacy: 'بيان الخصوصية'
+  Terms: "شروط الاستخدام"
