--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,7 +60,7 @@ en:
   Q1: "How can I use PlusOne? "
   Q1Ans: 'PlusOne gives patients the ability to get a Second Opinion from world-renowned experts. You can also request to receive our services through your treating doctor or our Case Managers who are qualified physicians themselves.
 
-  Get your Second Opinion by starting here <<link to the form on Ask PlusOne Expert>> Our team will get back to you within two business days?'
+  Get your Second Opinion by starting here <<link to the form on Ask PlusOne Expert>> Our team will get back to you within two business days.'
   Q2: "Why do I as a patient need a Second Opinion? "
   Q2Ans : "You can get a second (or third, or more) opinion for many reasons. The American Cancer Society mentions the following reasons given by people:
 
@@ -73,7 +73,7 @@ en:
   Q4: "How much time does it take until I get the Second Opinion report from the consultant? "
   Q4Ans: "Assuming all relevant data, scans and reports were uploaded correctly and fully at the time of requesting the Second Opinion, the Second Opinion will be provided to the patient within 7 business days. "
   Q5: "Can I ask for clarifications or have follow-up questions?"
-  Q5Ans: "In case of further clarifications required from the Second Opinion providers, a window of 15 consecutive days are there to submit further questions."
+  Q5Ans: "In case of further clarifications required from the Second Opinion providers, a window of 14 consecutive days are there to submit further questions."
   Q6: "How much Does it cost? "
   Q6Ans: "This depends greatly on the consultant selected as well as the case complexity, our case managers can help you with such estimations, are you ready to request a consultation: click here."
   always_there: 'Always there to care.'
@@ -109,3 +109,5 @@ en:
   seeking: "Are you seeking medical Second Opinion?"
   startHere: 'Start here'
   contact_us : "Contact us"
+  Privacy : 'Privacy'
+  Terms : "Terms"
