--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -79,3 +79,5 @@ ar:
   contact_us: "اتصل"
   Privacy: 'بيان الخصوصية'
   Terms: "شروط الاستخدام"
+  germny: " مكتبنا في برلين"
+  egypt: "مكتبنا في القاهرة"
