massege page edited

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -81,3 +81,4 @@ ar:
   Terms: "شروط الاستخدام"
   germny: " مكتبنا في برلين"
   egypt: "مكتبنا في القاهرة"
+  sucess_text: 'شكرا لتقديم طلبك. سيتم التواصل معكم في أسرع وقت'
