--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -113,3 +113,4 @@ en:
   Terms : "Terms"
   germny : "Germany Office"
   egypt: "Egypt Office"
+  sucess_text: 'Request Submitted. We will get back to you ASAP'
