back to home & btn submit fixed

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -82,3 +82,4 @@ ar:
   germny: " مكتبنا في برلين"
   egypt: "مكتبنا في القاهرة"
   sucess_text: 'شكرا لتقديم طلبك. سيتم التواصل معكم في أسرع وقت'
+  home_back : "العودة إلى المنزل"
