--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -114,3 +114,4 @@ en:
   germny : "Germany Office"
   egypt: "Egypt Office"
   sucess_text: 'Request Submitted. We will get back to you ASAP'
+  home_back : "Back to home"
