arabic text changed

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -76,7 +76,7 @@ ar:
   learnMore: "إعرف أكثر"
   seeking : "استشر أحد خبراء PlusOne‬"
   startHere: "إبدأ هنا"
-  contact_us: "اتصل"
+  contact_us: "اتصل بنا"
   Privacy: 'بيان الخصوصية'
   Terms: "شروط الاستخدام"
   germny: " مكتبنا في برلين"
