--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -75,7 +75,7 @@ en:
   Q5: "Can I ask for clarifications or have follow-up questions?"
   Q5Ans: "In case of further clarifications required from the Second Opinion providers, a window of 14 consecutive days are there to submit further questions."
   Q6: "How much Does it cost? "
-  Q6Ans: "This depends greatly on the consultant selected as well as the case complexity, our case managers can help you with such estimations, are you ready to request a consultation: click here."
+  Q6Ans: "This depends greatly on the consultant selected as well as the case complexity, our case managers can help you with such estimations, "
   always_there: 'Always there to care.'
   first_name : "First Name"
   last_name: "Last Name"
